@@ -5,6 +5,7 @@ Features
 --------
 
 * Allow multiple sandbox module directories to be specified (#1525).
+
 * Add Nginx stub status lua sandbox decoder
 
 Bug Handling
@@ -13,6 +14,9 @@ Bug Handling
 * Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).
 
 * Fixed ProcessInput hangs when splitter is defined (#1620, #1644).
+
+* `heka.all-report` and `heka.memstat` messages are now protobuf encoded before
+  being injected into the router (#1659).
 
 0.10.0b0 (2015-07-13)
 =====================
